FOF 3.2.2
================================================================================
+ FEF HTML helper: dragDropReordering
# [MEDIUM] DataModel constructor forcibly applies access level filtering when the model is doing asset tracking

FOF 3.2.1
================================================================================
# [HIGH] DataModel::count() causes a SQL error on MySQL 5.7+ with ONLY_FULL_GROUP_BY SQL mode enabled

FOF 3.2.0
================================================================================
+ Component version helper
+ Akeeba FEF renderer (to be used by Akeeba components in 2018)
# [HIGH] The defaultView option in fof.xml was being ignored

FOF 3.1.4
================================================================================
! PHP 7.2 compatibility: replace "numeric" field with "number". You have to do this change in your forms manually.
+ Select helper for use with Akeeba Frontend Framework (currently internal to Akeeba Ltd)
~ Deprecated DataModel::blacklistFilters for getting the filter list. Use getBlacklistFilters instead.
~ Deprecated XML Forms and associated features (fields, automatic validation, scaffolding, ...). They will be removed in FOF 4.0. We recommend using Blade (or PHP) templates instead.
~ Joomla! 4: Bump maximum Joomla! version suported by FOF and FOF-based extensions to 4.0.999
~ Joomla! 4: Do not use JVersion constant access as class properties
~ Joomla! 4: Component installation workarounds for Joomla! 3 (_createAdminMenus and _reallyPublishAdminMenuItems) will not run under Joomla! 4 as they'd break the installation.
~ Joomla! 4: Change rendering of toolbar tabs to match Bootstrap 4 styling, when using the "classic" linkbar rendering option (default)
~ Joomla! 3 renderer: using methods to open and close the component HTML output wrapper elements instead of hardcoding the output in pre-/post-render methods.
# [LOW] The default UCM content type information still referenced FOF 2